[package]
name = "quin"
version = "0.1.0"
edition = "2021"

[features]
default = ["server", "client"]
server = []
client = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["net", "io-util", "time"] }
